exports[`async data actions should add a node async 1`] = `
Array [
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "RESET_COUNT_CHANGE",
  },
  Object {
    "payload": 3,
    "type": "DATABROWSER_DATA_SETITEMCOUNT",
  },
  Object {
    "payload": Object {
      "loaded": Array [
        true,
        true,
        true,
      ],
      "nodes": Array [
        Object {
          "artwork": Object {
            "id": "cim1z9003001q0plmsdl2bkfc",
          },
          "description": "Artist from Brooklyn, NY",
          "id": "cink6lsyw002e01rnakgeqdy5",
          "name": "Anil Duran",
        },
        Object {
          "artwork": Object {
            "id": "cim1zk8f1004p0plmw0voxhdv",
          },
          "description": "Artist from Croatia",
          "id": "cink6kdmu002b01rnvcd0m8sa",
          "name": "Manuela Pieri",
        },
        Object {
          "artwork": Object {
            "id": "cim5895og00dy0pp1t2efj14j",
          },
          "description": "Self Portrait with Felt Hat (1887)",
          "id": "cink6int2002801rnjxxpvj3m",
          "name": "Vincent Van Gogh",
        },
      ],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": Object {
      "loaded": Array [],
      "nodes": Array [],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "RESET_COUNT_CHANGE",
  },
  Object {
    "payload": 3,
    "type": "DATABROWSER_DATA_SETITEMCOUNT",
  },
  Object {
    "payload": Object {
      "loaded": Array [
        true,
        true,
        true,
      ],
      "nodes": Array [
        Object {
          "artwork": Object {
            "id": "cim1z9003001q0plmsdl2bkfc",
          },
          "description": "Artist from Brooklyn, NY",
          "id": "cink6lsyw002e01rnakgeqdy5",
          "name": "Anil Duran",
        },
        Object {
          "artwork": Object {
            "id": "cim1zk8f1004p0plmw0voxhdv",
          },
          "description": "Artist from Croatia",
          "id": "cink6kdmu002b01rnvcd0m8sa",
          "name": "Manuela Pieri",
        },
        Object {
          "artwork": Object {
            "id": "cim5895og00dy0pp1t2efj14j",
          },
          "description": "Self Portrait with Felt Hat (1887)",
          "id": "cink6int2002801rnjxxpvj3m",
          "name": "Vincent Van Gogh",
        },
      ],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "MUTATION_REQUEST",
  },
  Object {
    "type": "DATABROWSER_UI_HIDE_NEW_ROW",
  },
  Object {
    "payload": Object {
      "artworkId": "asdlkasdlj",
      "description": "some description",
      "name": "some name",
    },
    "type": "ADD_NODE_REQUEST",
  },
  Object {
    "payload": "asldkaslkdj",
    "type": "INCREASE_COUNT_CHANGE",
  },
  Object {
    "payload": Object {
      "artwork": Object {
        "id": "cilr7v2hb004a0pl8hv92r3k4",
      },
      "description": "some description",
      "id": "ciu9st9820sgt0128cviki4sf",
      "name": "some name",
    },
    "type": "ADD_NODE_SUCCESS",
  },
  Object {
    "type": "MUTATION_SUCCESS",
  },
]
`;

exports[`async data actions should delete a node async 1`] = `
Array [
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "RESET_COUNT_CHANGE",
  },
  Object {
    "payload": 3,
    "type": "DATABROWSER_DATA_SETITEMCOUNT",
  },
  Object {
    "payload": Object {
      "loaded": Array [
        true,
        true,
        true,
      ],
      "nodes": Array [
        Object {
          "artwork": Object {
            "id": "cim1z9003001q0plmsdl2bkfc",
          },
          "description": "Artist from Brooklyn, NY",
          "id": "cink6lsyw002e01rnakgeqdy5",
          "name": "Anil Duran",
        },
        Object {
          "artwork": Object {
            "id": "cim1zk8f1004p0plmw0voxhdv",
          },
          "description": "Artist from Croatia",
          "id": "cink6kdmu002b01rnvcd0m8sa",
          "name": "Manuela Pieri",
        },
        Object {
          "artwork": Object {
            "id": "cim5895og00dy0pp1t2efj14j",
          },
          "description": "Self Portrait with Felt Hat (1887)",
          "id": "cink6int2002801rnjxxpvj3m",
          "name": "Vincent Van Gogh",
        },
      ],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": Object {
      "loaded": Array [],
      "nodes": Array [],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "RESET_COUNT_CHANGE",
  },
  Object {
    "payload": 3,
    "type": "DATABROWSER_DATA_SETITEMCOUNT",
  },
  Object {
    "payload": Object {
      "loaded": Array [
        true,
        true,
        true,
      ],
      "nodes": Array [
        Object {
          "artwork": Object {
            "id": "cim1z9003001q0plmsdl2bkfc",
          },
          "description": "Artist from Brooklyn, NY",
          "id": "cink6lsyw002e01rnakgeqdy5",
          "name": "Anil Duran",
        },
        Object {
          "artwork": Object {
            "id": "cim1zk8f1004p0plmw0voxhdv",
          },
          "description": "Artist from Croatia",
          "id": "cink6kdmu002b01rnvcd0m8sa",
          "name": "Manuela Pieri",
        },
        Object {
          "artwork": Object {
            "id": "cim5895og00dy0pp1t2efj14j",
          },
          "description": "Self Portrait with Felt Hat (1887)",
          "id": "cink6int2002801rnjxxpvj3m",
          "name": "Vincent Van Gogh",
        },
      ],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "MUTATION_REQUEST",
  },
  Object {
    "type": "DATABROWSER_UI_HIDE_NEW_ROW",
  },
  Object {
    "payload": Object {
      "artworkId": "asdlkasdlj",
      "description": "some description",
      "name": "some name",
    },
    "type": "ADD_NODE_REQUEST",
  },
  Object {
    "payload": "asldkaslkdj",
    "type": "INCREASE_COUNT_CHANGE",
  },
  Object {
    "payload": Object {
      "artwork": Object {
        "id": "cilr7v2hb004a0pl8hv92r3k4",
      },
      "description": "some description",
      "id": "ciu9st9820sgt0128cviki4sf",
      "name": "some name",
    },
    "type": "ADD_NODE_SUCCESS",
  },
  Object {
    "type": "MUTATION_SUCCESS",
  },
  Object {
    "type": "MUTATION_REQUEST",
  },
  Object {
    "payload": Object {
      "position": Object {
        "field": "description",
        "row": 0,
      },
      "value": "somedescription",
    },
    "type": "UPDATE_CELL",
  },
  Object {
    "type": "MUTATION_SUCCESS",
  },
  Object {
    "payload": "asldkaslkdj",
    "type": "DECREASE_COUNT_CHANGE",
  },
  Object {
    "type": "MUTATION_REQUEST",
  },
  Object {
    "payload": Array [
      "cink6lsyw002e01rnakgeqdy5",
    ],
    "type": "DELETE_NODES",
  },
  Object {
    "type": "DATABROWSER_UI_CLEAR_NODE_SELECTION",
  },
  Object {
    "type": "MUTATION_SUCCESS",
  },
]
`;

exports[`async data actions should run loadDataAsync 1`] = `
Array [
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "RESET_COUNT_CHANGE",
  },
  Object {
    "payload": 3,
    "type": "DATABROWSER_DATA_SETITEMCOUNT",
  },
  Object {
    "payload": Object {
      "loaded": Array [
        true,
        true,
        true,
      ],
      "nodes": Array [
        Object {
          "artwork": Object {
            "id": "cim1z9003001q0plmsdl2bkfc",
          },
          "description": "Artist from Brooklyn, NY",
          "id": "cink6lsyw002e01rnakgeqdy5",
          "name": "Anil Duran",
        },
        Object {
          "artwork": Object {
            "id": "cim1zk8f1004p0plmw0voxhdv",
          },
          "description": "Artist from Croatia",
          "id": "cink6kdmu002b01rnvcd0m8sa",
          "name": "Manuela Pieri",
        },
        Object {
          "artwork": Object {
            "id": "cim5895og00dy0pp1t2efj14j",
          },
          "description": "Self Portrait with Felt Hat (1887)",
          "id": "cink6int2002801rnjxxpvj3m",
          "name": "Vincent Van Gogh",
        },
      ],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
]
`;

exports[`async data actions should run reloadDataAsync 1`] = `
Array [
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "RESET_COUNT_CHANGE",
  },
  Object {
    "payload": 3,
    "type": "DATABROWSER_DATA_SETITEMCOUNT",
  },
  Object {
    "payload": Object {
      "loaded": Array [
        true,
        true,
        true,
      ],
      "nodes": Array [
        Object {
          "artwork": Object {
            "id": "cim1z9003001q0plmsdl2bkfc",
          },
          "description": "Artist from Brooklyn, NY",
          "id": "cink6lsyw002e01rnakgeqdy5",
          "name": "Anil Duran",
        },
        Object {
          "artwork": Object {
            "id": "cim1zk8f1004p0plmw0voxhdv",
          },
          "description": "Artist from Croatia",
          "id": "cink6kdmu002b01rnvcd0m8sa",
          "name": "Manuela Pieri",
        },
        Object {
          "artwork": Object {
            "id": "cim5895og00dy0pp1t2efj14j",
          },
          "description": "Self Portrait with Felt Hat (1887)",
          "id": "cink6int2002801rnjxxpvj3m",
          "name": "Vincent Van Gogh",
        },
      ],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": Object {
      "loaded": Array [],
      "nodes": Array [],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "RESET_COUNT_CHANGE",
  },
  Object {
    "payload": 3,
    "type": "DATABROWSER_DATA_SETITEMCOUNT",
  },
  Object {
    "payload": Object {
      "loaded": Array [
        true,
        true,
        true,
      ],
      "nodes": Array [
        Object {
          "artwork": Object {
            "id": "cim1z9003001q0plmsdl2bkfc",
          },
          "description": "Artist from Brooklyn, NY",
          "id": "cink6lsyw002e01rnakgeqdy5",
          "name": "Anil Duran",
        },
        Object {
          "artwork": Object {
            "id": "cim1zk8f1004p0plmw0voxhdv",
          },
          "description": "Artist from Croatia",
          "id": "cink6kdmu002b01rnvcd0m8sa",
          "name": "Manuela Pieri",
        },
        Object {
          "artwork": Object {
            "id": "cim5895og00dy0pp1t2efj14j",
          },
          "description": "Self Portrait with Felt Hat (1887)",
          "id": "cink6int2002801rnjxxpvj3m",
          "name": "Vincent Van Gogh",
        },
      ],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
]
`;

exports[`async data actions should update a node async 1`] = `
Array [
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "RESET_COUNT_CHANGE",
  },
  Object {
    "payload": 3,
    "type": "DATABROWSER_DATA_SETITEMCOUNT",
  },
  Object {
    "payload": Object {
      "loaded": Array [
        true,
        true,
        true,
      ],
      "nodes": Array [
        Object {
          "artwork": Object {
            "id": "cim1z9003001q0plmsdl2bkfc",
          },
          "description": "Artist from Brooklyn, NY",
          "id": "cink6lsyw002e01rnakgeqdy5",
          "name": "Anil Duran",
        },
        Object {
          "artwork": Object {
            "id": "cim1zk8f1004p0plmw0voxhdv",
          },
          "description": "Artist from Croatia",
          "id": "cink6kdmu002b01rnvcd0m8sa",
          "name": "Manuela Pieri",
        },
        Object {
          "artwork": Object {
            "id": "cim5895og00dy0pp1t2efj14j",
          },
          "description": "Self Portrait with Felt Hat (1887)",
          "id": "cink6int2002801rnjxxpvj3m",
          "name": "Vincent Van Gogh",
        },
      ],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": Object {
      "loaded": Array [],
      "nodes": Array [],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "RESET_COUNT_CHANGE",
  },
  Object {
    "payload": 3,
    "type": "DATABROWSER_DATA_SETITEMCOUNT",
  },
  Object {
    "payload": Object {
      "loaded": Array [
        true,
        true,
        true,
      ],
      "nodes": Array [
        Object {
          "artwork": Object {
            "id": "cim1z9003001q0plmsdl2bkfc",
          },
          "description": "Artist from Brooklyn, NY",
          "id": "cink6lsyw002e01rnakgeqdy5",
          "name": "Anil Duran",
        },
        Object {
          "artwork": Object {
            "id": "cim1zk8f1004p0plmw0voxhdv",
          },
          "description": "Artist from Croatia",
          "id": "cink6kdmu002b01rnvcd0m8sa",
          "name": "Manuela Pieri",
        },
        Object {
          "artwork": Object {
            "id": "cim5895og00dy0pp1t2efj14j",
          },
          "description": "Self Portrait with Felt Hat (1887)",
          "id": "cink6int2002801rnjxxpvj3m",
          "name": "Vincent Van Gogh",
        },
      ],
    },
    "type": "DATABROWSER_DATA_SET_DATA",
  },
  Object {
    "payload": false,
    "type": "DATABROWSER_UI_SET_LOADING",
  },
  Object {
    "type": "MUTATION_REQUEST",
  },
  Object {
    "type": "DATABROWSER_UI_HIDE_NEW_ROW",
  },
  Object {
    "payload": Object {
      "artworkId": "asdlkasdlj",
      "description": "some description",
      "name": "some name",
    },
    "type": "ADD_NODE_REQUEST",
  },
  Object {
    "payload": "asldkaslkdj",
    "type": "INCREASE_COUNT_CHANGE",
  },
  Object {
    "payload": Object {
      "artwork": Object {
        "id": "cilr7v2hb004a0pl8hv92r3k4",
      },
      "description": "some description",
      "id": "ciu9st9820sgt0128cviki4sf",
      "name": "some name",
    },
    "type": "ADD_NODE_SUCCESS",
  },
  Object {
    "type": "MUTATION_SUCCESS",
  },
  Object {
    "type": "MUTATION_REQUEST",
  },
  Object {
    "payload": Object {
      "position": Object {
        "field": "description",
        "row": 0,
      },
      "value": "somedescription",
    },
    "type": "UPDATE_CELL",
  },
  Object {
    "type": "MUTATION_SUCCESS",
  },
]
`;
